# wasmtime-go

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  component.go  component_feat_component_model.go  component_feat_component_model_test.go  component_func.go  component_func_feat_component_model.go  component_instance.go  component_instance_feat_component_model.go  component_linker.go  component_linker_feat_component_model.go  component_linker_feat_component_model_test.go  component_test.go  component_type_feat_component_model.go  component_type_feat_component_model_test.go  component_val.go  component_val_feat_component_model.go  component_valtype_feat_component_model.go  component_valtype_feat_component_model_test.go  config.go  config_feat_cache.go  config_feat_component_model.go  config_feat_cranelift.go  config_feat_parallel_compilation.go  config_feat_threads.go  config_test.go  coverage.html  doc.go  doc_test.go  download-wasmtime.py  engine.go  engine_test.go  error.go  example_fuel_test.go  example_interrupt_test.go  example_linker_test.go  example_memory_test.go  (+63 more)
.github/workflows/: main.yml
ci/: download-wasmtime.py  local.sh  run-local.sh  test-vendoring.sh
ci/test-minimal-runtime/: .gitignore  create_cwasm.go  go.mod  go.sum  min_test.go  test.sh
examples/: README.md  gcd.go  gcd_test.go  hello.go  interrupt_test.go  linking.go  memory.go  multi.go  serialize_test.go  wasi.wat  wasi_test.go
examples/gcd/: main.go
examples/hello/: main.go
examples/linking/: main.go
examples/memory/: main.go
examples/multi/: main.go
pkg/wasmtime/: config.go  doc.go  doc_test.go  exporttype_test.go  extern.go  ffi.go  func.c  func.go  func.h  func_test.go  functype.go  functype_test.go  global.go  global_test.go  globaltype.go  globaltype_test.go  importtype.go  instance.go  (+20 more)
